# stable-diffusion-rpc

./: .gitignore  .swiftformat  .swiftlint.yml  LICENSE  Package.swift  README.md
.github/workflows/: core.yml  java.yml  macos.yml  publish.yml
Clients/Cpp/: .gitignore  CMakeLists.txt  StableDiffusion.proto  sample.cpp
Clients/Cpp/src/: StableDiffusion.proto  sample.cpp
Clients/Java/: .gitignore  build.gradle.kts  settings.gradle.kts
Common/: StableDiffusion.proto  host.proto  image_generation.proto  jobs.proto  metadata.proto  model.proto  shared.proto  tokenizer.proto
Sources/StableDiffusionControl/: StableDiffusionClient.swift  main.swift
Sources/StableDiffusionCore/: Errors.swift  ImageExtensions.swift  JobManager.swift  ModelManager.swift  ModelState.swift
Sources/StableDiffusionNode/: HostModelService.swift  ImageGenerationService.swift  JobService.swift  ModelService.swift  ServerMetadataService.swift  TokenizerService.swift  main.swift
Sources/StableDiffusionProtos/: StableDiffusion.grpc.swift  StableDiffusion.pb.swift  Utilities.swift  host.grpc.swift  host.pb.swift  image_generation.grpc.swift  image_generation.pb.swift  jobs.grpc.swift  jobs.pb.swift  metadata.grpc.swift  metadata.pb.swift  model.grpc.swift  model.pb.swift  shared.pb.swift  tokenizer.grpc.swift  tokenizer.pb.swift
Sources/StableDiffusionServer/: Errors.swift  ImageExtensions.swift  ImageGenerationService.swift  JobService.swift  ModelManager.swift  ModelService.swift  ModelState.swift  TokenizerService.swift  main.swift
Tools/: generate-protobuf-swift.sh
(+5 files in other folders)
